Fix MathJax long-formula overflow on X-axis in mobile  and small screens view

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1510,3 +1510,7 @@ figure.cover {
     color: #23212d !important;
   }
 }
+
+mjx-container[jax="CHTML"][display="true"] {
+  overflow-x: auto;
+}
